update gerrit docker setting and bump version to 3.2.0